# Imagerie

./: .gitignore  CMakeLists.txt
src/: abstractalgorithm.cpp  abstractalgorithm.h  codebookalgorithm.cpp  codebookalgorithm.h  codebookdeterministic.cpp  codebookdeterministic.h  codebookprobabilistic.cpp  codebookprobabilistic.h  deterministicalgorithm.cpp  deterministicalgorithm.h  main.cpp  probabilisticalgorithm.cpp  probabilisticalgorithm.h  random.h  utils.cpp  utils.h
